--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-	<title>E·YOGA-B</title>
+	<title>E·YOGA</title>
 	<link rel="stylesheet" type="text/css" href="/E-YOGA/prd/styles/usage/app.css"/>
 </head>
 <body>
