--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
 	<script src="/E-YOGA/prd/scripts/app.js" type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript">
+
+	</script>
 </body>
 </html>
